build the comments pane

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles/dashboard.css">
     <link rel="stylesheet" href="styles/conversations.css">
     <link rel="stylesheet" href="styles/chats.css">
+    <link rel="stylesheet" href="styles/comments.css">
     <title>Simpu</title>
 </head>
 <body>
@@ -199,7 +200,60 @@
                                 </div>
                             </form>
                         </section>
-                        <section class="comments-body"></section>
+                        <section class="comments-body">
+                            <h2>Comments</h2>
+                            <article class="comment">
+                                <div class="comment-avatar-container">
+                                    <img src="images/user1.jpg" alt="User avatar" class="comment-avatar">
+                                </div>
+                                <div class="comment-body">
+                                    <p>Having a baby can be a nerve wracking experience for new parents – not the nine months of pregnancy.</p>
+                                </div>
+                            </article>
+                            <article class="comment">
+                                <div class="comment-avatar-container">
+                                    <img src="images/user2.jpg" alt="User avatar" class="comment-avatar">
+                                </div>
+                                <div class="comment-body">
+                                    <p>Having a baby can be a nerve wracking experience for new parents – not the nine months of pregnancy.</p>
+                                </div>
+                            </article>
+                            <article class="comment">
+                                <div class="comment-avatar-container">
+                                    <img src="images/user3.jpg" alt="User avatar" class="comment-avatar">
+                                </div>
+                                <div class="comment-body">
+                                    <p>Having a baby can be a nerve wracking experience for new parents – not the nine months of pregnancy.</p>
+                                </div>
+                            </article>
+                            <article class="comment">
+                                <div class="comment-avatar-container">
+                                    <img src="images/user1.jpg" alt="User avatar" class="comment-avatar">
+                                </div>
+                                <div class="comment-body">
+                                    <p>Having a baby can be a nerve wracking experience for new parents – not the nine months of pregnancy.</p>
+                                </div>
+                            </article>
+                            <article class="comment">
+                                <div class="comment-avatar-container">
+                                    <img src="images/user2.jpg" alt="User avatar" class="comment-avatar">
+                                </div>
+                                <div class="comment-body">
+                                    <p>Having a baby can be a nerve wracking experience for new parents – not the nine months of pregnancy.</p>
+                                </div>
+                            </article>
+                            <form class="comment-form">
+                                <div class="comment-avatar-container">
+                                    <img src="images/user3.jpg" alt="User avatar" class="comment-avatar">
+                                </div>
+                                <input type="text" class="comment-input" placeholder="Write your comment...">
+                                <div role="button" tabindex="0" class="comment-btn" aria-label="Submit Comment">
+                                    <p class="comment-btn-telegram-icon" aria-label="Telegram icon">
+                                        <i class="fab fa-telegram-plane"></i>
+                                    </p>
+                                </div>
+                            </form>
+                        </section>
                     </div>
                 </div>
             </div>
